# docvec

./: .gitignore  Cargo.toml  README.md  build.sh  index.html  index.js
data/: index_content.txt  page_content.txt
model/: build_index.py  index.json  simplify_model.sh
scripts/: hf_optimum.py  inference.py  test_onnx.py  to_onnx.py
src/: embedder.rs  index.rs  lib.rs  utils.rs
